fix alignments

--- a/src/routes/home/style.scss
+++ b/src/routes/home/style.scss
@@ -1,9 +1,5 @@
 @import '../../css/_variables';
 
-.features_container {
-	padding-top: 45px;
-}
-
 .features_title {
 	text-align: center;
 	margin: 0 auto;
